style: Better UI and UX